blender 2.8 #63223

Closed
opened 2019-04-02 16:22:36 +02:00 by luan · 13 comments

System Information
Operating system: Windows 10
Graphics card: GTX 750Ti

Blender Version
Broken: blender-2.80.0-git.98f00a3eb526-windows64
Worked: Casa_Externa_Eevee.blend

Short description of error

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

I think eevee instability is in the use of texture in PCs more modesty

**System Information** Operating system: Windows 10 Graphics card: GTX 750Ti **Blender Version** Broken: blender-2.80.0-git.98f00a3eb526-windows64 Worked: [Casa_Externa_Eevee.blend](https://archive.blender.org/developer/F6907378/Casa_Externa_Eevee.blend) **Short description of error** **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). I think eevee instability is in the use of texture in PCs more modesty
Author

Added subscriber: @Luan-Rodrigues

Added subscriber: @Luan-Rodrigues

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

A guideline for making a good bug report can be found here: https://wiki.blender.org/wiki/Process/Bug_Reports

Please follow our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc. A guideline for making a good bug report can be found here: https://wiki.blender.org/wiki/Process/Bug_Reports

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

There still isn't a description of what is wrong. Calling the bug 'blender 2.8' is not really very descriptive.

Also, your file is 700 megabytes. Please make a simple blend file, as well as a clear description of the issue.

Thanks

There still isn't a description of what is wrong. Calling the bug 'blender 2.8' is not really very descriptive. Also, your file is 700 megabytes. Please make a simple blend file, as well as a clear description of the issue. Thanks

Screenshot 2019-04-02 at 17.32.18.png

Opened it up - seems to work fine, even though you forgot to pack some textures it seems

![Screenshot 2019-04-02 at 17.32.18.png](https://archive.blender.org/developer/F6907629/Screenshot_2019-04-02_at_17.32.18.png) Opened it up - seems to work fine, even though you forgot to pack some textures it seems
Author

Casa-Eevee.blend Wrong file

the error occurs when texture is added
it simply closes, but this does not occur when it has no texture
and in the most current version it got worse

blender-2.80.0-git.98f00a3eb526-windows64
VID_20190402_142251976.mp4
blender-2.80.0-git.a205493426b-windows64
VID_20190402_142147573.mp4

[Casa-Eevee.blend](https://archive.blender.org/developer/F6907729/Casa-Eevee.blend) Wrong file the error occurs when texture is added it simply closes, but this does not occur when it has no texture and in the most current version it got worse blender-2.80.0-git.98f00a3eb526-windows64 [VID_20190402_142251976.mp4](https://archive.blender.org/developer/F6907804/VID_20190402_142251976.mp4) blender-2.80.0-git.a205493426b-windows64 [VID_20190402_142147573.mp4](https://archive.blender.org/developer/F6907786/VID_20190402_142147573.mp4)

Are you using the latest nvidia drivers for your card? https://www.nvidia.co.uk/Download/index.aspx?lang=en-uk

Are you using the latest nvidia drivers for your card? https://www.nvidia.co.uk/Download/index.aspx?lang=en-uk
Author

image.png yes, the most recently

![image.png](https://archive.blender.org/developer/F6910824/image.png) yes, the most recently
Jeroen Bakker self-assigned this 2019-04-05 11:35:43 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Seems also to be related to Linux/AMD, so I assume somehow we are not following the OpenGL standard.

It fails when allocating the texture for the cube map. the scene does not use cube maps and it is set to allocate a cube map for 250925091, a TEXTURE_ARRAY_2D is used for this.
When selecting GL_PROXY_TEXTURE_2D_ARRAY in GPU_texture_create_nD for this texture it fails to allocate the memory.
When using GL_PROXY_TEXTURE_2D in this case (as it only has a depth of 1) it does not crash.

Will check with @fclem to if this is a solution we can support.

Seems also to be related to Linux/AMD, so I assume somehow we are not following the OpenGL standard. It fails when allocating the texture for the cube map. the scene does not use cube maps and it is set to allocate a cube map for 2509*2509*1, a TEXTURE_ARRAY_2D is used for this. When selecting `GL_PROXY_TEXTURE_2D_ARRAY` in `GPU_texture_create_nD` for this texture it fails to allocate the memory. When using `GL_PROXY_TEXTURE_2D` in this case (as it only has a depth of 1) it does not crash. Will check with @fclem to if this is a solution we can support.
Author

Thanks, I'll wait for other versions, great work!

Thanks, I'll wait for other versions, great work!
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63223
No description provided.